edited css to work with html

--- a/foundations/cascade/01-cascade-fix/style.css
+++ b/foundations/cascade/01-cascade-fix/style.css
@@ -1,9 +1,14 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
+  
+}
+p {
+  font-weight: 800;
+  color: black;
 }
 
-.para,
-.small-para {
+.para {
+  font-size: 22px;
   color: hsl(0, 0%, 0%);
   font-weight: 800;
 }
@@ -13,30 +18,27 @@ body {
   font-weight: 800;
 }
 
-.para {
-  font-size: 22px;
-}
-
 .confirm {
   background: green;
   color: white;
+  font-size: 20px;
   font-weight: bold;
 } 
 
-.button {
+.cancel {
   background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
   font-size: 20px;
 }
 
-.child {
-  color: rgb(0, 0, 0);
-  font-weight: 800;
-  font-size: 14px;
-}
 
-div.text {
+.text {
   color: rgb(0, 0, 0);
   font-size: 22px;
   font-weight: 100;
+}
+div.child {
+  color: rgb(0, 0, 0);
+  font-weight: 800;
+  font-size: 14px;
 }
